repaired overflow in the x direction

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,5 +30,5 @@ a {
 }
 
 .no-overflow {
-  overflow: hidden;
+  overflow-x: hidden;
 }
